# Barista-Boutique

./: .env  LICENSE  README.md  db.sqlite3  link.txt  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/: base.html  loginaccount.html  signupaccount.html
api_Product/: apps.py  models.py  urls.py  views.py
api_Product/migrations/: 0001_initial.py  0002_remove_product_url.py
pages/: admin.py  factories.py  forms.py  models.py  services.py  urls.py  views.py
pages/locale/en/LC_MESSAGES/: django.mo  django.po
pages/locale/es/LC_MESSAGES/: django.mo  django.po
pages/management/commands/: seed_products.py
pages/migrations/: 0001_initial.py  0002_alter_product_description_review.py  0003_product_url.py  0004_technique.py  0005_product_image.py  0006_alter_product_image.py  0007_alter_product_image.py  0008_technique_image.py  0009_alter_product_image.py  0010_alter_technique_image.py
pages/static/pages/: app.css  buttons.css  header.css
pages/templates/: createreview.html  detail.html  updatereview.html
pages/templates/external_api/: show.html
pages/templates/pages/: about.html  base.html  home.html
pages/templates/products/: create.html  detail.html  index.html  show.html
pages/templates/reviews/: create.html  update.html
pages/templates/techniques/: create.html  index.html  show.html
pages/tests/: test_models.py  test_url.py
taller01_project/: asgi.py  settings.py  settings_development.py  settings_production.py  urls.py  wsgi.py
